overflow fix

--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -68,6 +68,7 @@ body, html
   &__content
     // used for sticky footer (flexbox way)
     flex: 1 0 auto
+    overflow: hidden
 
 +r($md)
   .page
